--- a/api/menu/models/menu.settings.json
+++ b/api/menu/models/menu.settings.json
@@ -63,6 +63,13 @@
     },
     "publishEndDate": {
       "type": "datetime"
+    },
+    "menulocation": {
+      "type": "enumeration",
+      "enum": [
+        "main",
+        "footer"
+      ]
     }
   }
 }
