--- a/api/website-configuration/models/website-configuration.settings.json
+++ b/api/website-configuration/models/website-configuration.settings.json
@@ -27,6 +27,24 @@
       ],
       "plugin": "upload",
       "required": true
+    },
+    "defaultimage": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images"
+      ],
+      "plugin": "upload",
+      "required": false
+    },
+    "logo": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images"
+      ],
+      "plugin": "upload",
+      "required": false
     }
   }
 }
